--- a/projector/media/css/browser.css
+++ b/projector/media/css/browser.css
@@ -88,10 +88,27 @@ table.code-browser tbody tr:hover td { color: #000; background: #eed !important 
 
 ul.changeset-changes {
     list-style: none;
+    padding: 0;
 }
 ul.changeset-changes li {
     float: left;
+    padding: 1px;
+    min-width: 12px;
+    border: 1px solid #000;
+    text-align: center;
+    color: #000;
+    font-size: 0.8em;
 }
 ul.changeset-changes li.added {
-    background-color: lime;
+    background-color: #00ff00;
+    border-right: none;
 }
+ul.changeset-changes li.changed {
+    background-color: #ffaa00;
+    border-right: none;
+}
+ul.changeset-changes li.removed {
+    background-color: #f27474;
+    margin-right: 5px;
+}
+
