Added readme file pygments-highlighted content at repository browser

--- a/projector/templates/projector/project/repository/browse.html
+++ b/projector/templates/projector/project/repository/browse.html
@@ -203,4 +203,17 @@
 </div>
 </div>
 
+{% if readme_node and readme_node.content %}
+<div class="richtemplates-panel">
+    <h5>{{ readme_node }}</h5>
+    <div class="richtemplates-panel-content">
+        <div class="richblock">
+            <div class="codeblock">
+                {% highlight readme_node.content readme_node.lexer_alias linenos=true anchorlinenos=true lineanchors=line cssclass="code-highlight" %}
+            </div>
+        </div>
+    </div>
+</div>
+{% endif %}
+
 {% endblock %}
