Updates project creation form for multiple scm support

--- a/projector/templates/projector/project/detail.html
+++ b/projector/templates/projector/project/detail.html
@@ -152,6 +152,10 @@
                             {% endif %}
                         </td>
                     </tr>
+                    <tr>
+                        <th>SCM</th>
+                        <td>{% if project.repository.alias %}{{ project.repository.alias }}{% else %}-{% endif %}</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
