--- a/projector/templates/projector/project/detail.html
+++ b/projector/templates/projector/project/detail.html
@@ -92,13 +92,14 @@
         </ul>
         {% endif %}
 
-        {% with project.get_repo_url|put_username_into_url:user as project_url %}
+        {% if project.repository %}
+        {% with project.get_clone_cmd|put_username_into_url:user as clone_url %}
         <ul class="messages">
             <li class="message message-info">{% trans "Clone repository" %}:
-            <input id="id_project_repository_url" value="hg clone {{ project_url }}"
-                size="{{ project_url|length|add:'15' }}"
-                onblur="this.value='hg clone {{ project_url }}';"/></li>
-            {% if "://example.com" in project.get_repo_url or "@example.com" in project.get_repo_url %}
+            <input id="id_project_repository_url" value="{{ clone_url }}"
+                size="{{ clone_url|length|add:'15' }}"
+                onblur="this.value='{{ clone_url }}';"/></li>
+            {% if "://example.com" in clone_url or "@example.com" in clone_url %}
             <li class="message message-warning">
                 {% trans "Repository URL seems to be broken. Maybe you have forgotten to " %}
                 <a href="{% url admin:sites_site_change 1 %}">{% trans "set site" %}</a> {% trans "at admin panel?" %}
@@ -106,6 +107,7 @@
             {% endif %}
         </ul>
         {% endwith %}
+        {% endif %}
 
         {% endblock project-links %}
         </div>
